[REFACTOR] 외부 API 통신 타임아웃 적용 (#26)
* chore: 에러 코드 세분화 (#25)

* refactor: 외부 API 통신 타임아웃 적용 (#25)

* refactor: 코드 리팩토링 (#25)